# dummy-package

./: README.md  pyproject.toml  test_api.py
src/dummy_package/: __init__.py  api.py  cli.py  smart_predict.py
